fix: retain OCHA Services border on mobile
Refs: CD-537

--- a/libraries/cd/cd-footer/cd-ocha.css
+++ b/libraries/cd/cd-footer/cd-ocha.css
@@ -2,22 +2,28 @@
  * Common Design: OCHA Services
  */
 .cd-ocha-services {
-  @media screen and (min-width: 768px) {
-    position: relative;
-    margin-block-end: 3rem;
-    padding-block-end: 1rem;
+  position: relative;
+  margin-block-end: 3rem;
+  padding-block-end: 1rem;
 
-    /* Add a horizontal separator once layout expands */
+  /* Add a horizontal separator once layout expands */
+  &::before {
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    display: block;
+    width: 80%;
+    height: 1px;
+    content: '';
+    opacity: 0.6;
+    background: var(--cd-white);
+
+  }
+
+  @media screen and (min-width: 768px) {
     &::before {
-      position: absolute;
-      bottom: 0;
       left: 0;
-      display: block;
       width: 100%;
-      height: 1px;
-      content: '';
-      opacity: 0.6;
-      background: var(--cd-white);
     }
   }
 }
